// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/sender/demo/actions.tsx extend context correctly 1`] = `
<div
  class="ant-app"
>
  <div
    class="ant-sender"
  >
    <div
      class="ant-sender-content"
    >
      <textarea
        class="ant-input ant-input-borderless ant-sender-input"
        style="overflow-y: hidden; resize: none;"
      />
      <div
        class="ant-sender-actions-list"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography ant-typography-secondary"
            >
              <small>
                \`Shift + Enter\` to submit
              </small>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="clear"
                  class="anticon anticon-clear"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="clear"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <defs>
                      <style />
                    </defs>
                    <path
                      d="M899.1 869.6l-53-305.6H864c14.4 0 26-11.6 26-26V346c0-14.4-11.6-26-26-26H618V138c0-14.4-11.6-26-26-26H432c-14.4 0-26 11.6-26 26v182H160c-14.4 0-26 11.6-26 26v192c0 14.4 11.6 26 26 26h17.9l-53 305.6a25.95 25.95 0 0025.6 30.4h723c1.5 0 3-.1 4.4-.4a25.88 25.88 0 0021.2-30zM204 390h272V182h72v208h272v104H204V390zm468 440V674c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v156H416V674c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v156H202.8l45.1-260H776l45.1 260H672z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="open-a-i"
                  class="anticon anticon-open-a-i"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="open-a-i"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M482.88 128c-84.35 0-156.58 52.8-185.68 126.98-60.89 8.13-115.3 43.63-146.6 97.84-42.16 73-32.55 161.88 17.14 224.16-23.38 56.75-19.85 121.6 11.42 175.78 42.18 73.02 124.1 109.15 202.94 97.23C419.58 898.63 477.51 928 540.12 928c84.35 0 156.58-52.8 185.68-126.98 60.89-8.13 115.3-43.62 146.6-97.84 42.16-73 32.55-161.88-17.14-224.16 23.38-56.75 19.85-121.6-11.42-175.78-42.18-73.02-124.1-109.15-202.94-97.23C603.42 157.38 545.49 128 482.88 128m0 61.54c35.6 0 68.97 13.99 94.22 37.74-1.93 1.03-3.92 1.84-5.83 2.94l-136.68 78.91a46.11 46.11 0 00-23.09 39.78l-.84 183.6-65.72-38.34V327.4c0-76 61.9-137.86 137.94-137.86m197.7 75.9c44.19 3.14 86.16 27.44 109.92 68.57 17.8 30.8 22.38 66.7 14.43 100.42-1.88-1.17-3.6-2.49-5.53-3.6l-136.73-78.91a46.23 46.23 0 00-46-.06l-159.47 91.1.36-76.02 144.5-83.41a137.19 137.19 0 0178.53-18.09m-396.92 55.4c-.07 2.2-.3 4.35-.3 6.56v157.75a46.19 46.19 0 0022.91 39.9l158.68 92.5-66.02 37.67-144.55-83.35c-65.86-38-88.47-122.53-50.45-188.34 17.78-30.78 46.55-52.69 79.73-62.68m340.4 79.93l144.54 83.35c65.86 38 88.47 122.53 50.45 188.34-17.78 30.78-46.55 52.69-79.73 62.68.07-2.19.3-4.34.3-6.55V570.85a46.19 46.19 0 00-22.9-39.9l-158.69-92.5zM511.8 464.84l54.54 31.79-.3 63.22-54.84 31.31-54.54-31.85.3-63.16zm100.54 58.65l65.72 38.35V728.6c0 76-61.9 137.86-137.94 137.86-35.6 0-68.97-13.99-94.22-37.74 1.93-1.03 3.92-1.84 5.83-2.94l136.68-78.9a46.11 46.11 0 0023.09-39.8zm-46.54 89.55l-.36 76.02-144.5 83.41c-65.85 38-150.42 15.34-188.44-50.48-17.8-30.8-22.38-66.7-14.43-100.42 1.88 1.17 3.6 2.5 5.53 3.6l136.74 78.91a46.23 46.23 0 0046 .06z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/sender/demo/actions.tsx extend context correctly 2`] = `[]`;

exports[`renders components/sender/demo/basic.tsx extend context correctly 1`] = `
<div
  class="ant-app"
>
  <div
    class="ant-flex ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
  >
    <div
      class="ant-sender"
    >
      <div
        class="ant-sender-content"
      >
        <textarea
          class="ant-input ant-input-borderless ant-sender-input"
          style="overflow-y: hidden; resize: none;"
        >
          Hello? this is X!
        </textarea>
        <div
          class="ant-sender-actions-list"
        >
          <div
            class="ant-sender-actions-list-presets ant-flex"
          >
            <button
              class="ant-btn ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="arrow-up"
                  class="anticon anticon-arrow-up"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="arrow-up"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-sender"
    >
      <div
        class="ant-sender-content"
      >
        <textarea
          class="ant-input ant-input-borderless ant-sender-input"
          readonly=""
          style="overflow-y: hidden; resize: none;"
        >
          Force as loading
        </textarea>
        <div
          class="ant-sender-actions-list"
        >
          <div
            class="ant-sender-actions-list-presets ant-flex"
          >
            <button
              class="ant-btn ant-btn-circle ant-btn-text ant-btn-color-primary ant-btn-variant-text ant-sender-actions-btn ant-sender-actions-btn-loading-button"
              type="button"
            >
              <svg
                class="ant-sender-actions-btn-loading-icon"
                color="currentColor"
                viewBox="0 0 1000 1000"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <title>
                  Stop Loading
                </title>
                <rect
                  fill="currentColor"
                  height="250"
                  rx="24"
                  ry="24"
                  width="250"
                  x="375"
                  y="375"
                />
                <circle
                  cx="500"
                  cy="500"
                  fill="none"
                  opacity="0.45"
                  r="450"
                  stroke="currentColor"
                  stroke-width="100"
                />
                <circle
                  cx="500"
                  cy="500"
                  fill="none"
                  r="450"
                  stroke="currentColor"
                  stroke-dasharray="600 9999999"
                  stroke-width="100"
                >
                  <animatetransform
                    attributeName="transform"
                    dur="1s"
                    from="0 500 500"
                    repeatCount="indefinite"
                    to="360 500 500"
                    type="rotate"
                  />
                </circle>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-sender ant-sender-disabled"
    >
      <div
        class="ant-sender-content"
      >
        <textarea
          class="ant-input ant-input-borderless ant-sender-input ant-input-disabled"
          disabled=""
          style="overflow-y: hidden; resize: none;"
        >
          Set to disabled
        </textarea>
        <div
          class="ant-sender-actions-list"
        >
          <div
            class="ant-sender-actions-list-presets ant-flex"
          >
            <button
              class="ant-btn ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="arrow-up"
                  class="anticon anticon-arrow-up"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="arrow-up"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/sender/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/sender/demo/header.tsx extend context correctly 1`] = `
<div
  class="ant-app"
>
  <div
    class="ant-flex ant-flex-align-end"
    style="height: 350px;"
  >
    <div
      class="ant-sender"
    >
      <div
        class="ant-sender-content"
      >
        <div
          class="ant-sender-prefix"
        >
          <button
            class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="link"
                class="anticon anticon-link"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="link"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M574 665.4a8.03 8.03 0 00-11.3 0L446.5 781.6c-53.8 53.8-144.6 59.5-204 0-59.5-59.5-53.8-150.2 0-204l116.2-116.2c3.1-3.1 3.1-8.2 0-11.3l-39.8-39.8a8.03 8.03 0 00-11.3 0L191.4 526.5c-84.6 84.6-84.6 221.5 0 306s221.5 84.6 306 0l116.2-116.2c3.1-3.1 3.1-8.2 0-11.3L574 665.4zm258.6-474c-84.6-84.6-221.5-84.6-306 0L410.3 307.6a8.03 8.03 0 000 11.3l39.7 39.7c3.1 3.1 8.2 3.1 11.3 0l116.2-116.2c53.8-53.8 144.6-59.5 204 0 59.5 59.5 53.8 150.2 0 204L665.3 562.6a8.03 8.03 0 000 11.3l39.8 39.8c3.1 3.1 8.2 3.1 11.3 0l116.2-116.2c84.5-84.6 84.5-221.5 0-306.1zM610.1 372.3a8.03 8.03 0 00-11.3 0L372.3 598.7a8.03 8.03 0 000 11.3l39.6 39.6c3.1 3.1 8.2 3.1 11.3 0l226.4-226.4c3.1-3.1 3.1-8.2 0-11.3l-39.5-39.6z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
        <textarea
          class="ant-input ant-input-borderless ant-sender-input"
          placeholder="← Click to open"
          style="overflow-y: hidden; resize: none;"
        />
        <div
          class="ant-sender-actions-list"
        >
          <div
            class="ant-sender-actions-list-presets ant-flex"
          >
            <button
              class="ant-btn ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="arrow-up"
                  class="anticon anticon-arrow-up"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="arrow-up"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/sender/demo/header.tsx extend context correctly 2`] = `[]`;

exports[`renders components/sender/demo/send-style.tsx extend context correctly 1`] = `
<div
  class="ant-app"
>
  <div
    class="ant-flex ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
  >
    <div
      class="ant-sender"
    >
      <div
        class="ant-sender-content"
      >
        <textarea
          class="ant-input ant-input-borderless ant-sender-input"
          placeholder="Change button border radius"
          style="overflow-y: hidden; resize: none;"
        >
          Ask something?
        </textarea>
        <div
          class="ant-sender-actions-list"
        >
          <button
            class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn"
            style="border-radius: 12px;"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="arrow-up"
                class="anticon anticon-arrow-up"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-top"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; bottom: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                role="tooltip"
              >
                Send ↵
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-sender"
    >
      <div
        class="ant-sender-content"
      >
        <textarea
          class="ant-input ant-input-borderless ant-sender-input"
          placeholder="Change button icon"
          style="overflow-y: hidden; resize: none;"
        >
          Ask something?
        </textarea>
        <div
          class="ant-sender-actions-list"
        >
          <button
            class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-text ant-btn-icon-only ant-sender-actions-btn"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="send"
                class="anticon anticon-send"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="send"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <defs>
                    <style />
                  </defs>
                  <path
                    d="M931.4 498.9L94.9 79.5c-3.4-1.7-7.3-2.1-11-1.2a15.99 15.99 0 00-11.7 19.3l86.2 352.2c1.3 5.3 5.2 9.6 10.4 11.3l147.7 50.7-147.6 50.7c-5.2 1.8-9.1 6-10.3 11.3L72.2 926.5c-.9 3.7-.5 7.6 1.2 10.9 3.9 7.9 13.5 11.1 21.5 7.2l836.5-417c3.1-1.5 5.6-4.1 7.2-7.1 3.9-8 .7-17.6-7.2-21.6zM170.8 826.3l50.3-205.6 295.2-101.3c2.3-.8 4.2-2.6 5-5 1.4-4.2-.8-8.7-5-10.2L221.1 403 171 198.2l628 314.9-628.2 313.2z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-top"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; bottom: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                role="tooltip"
              >
                Send ↵
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-sender"
    >
      <div
        class="ant-sender-content"
      >
        <textarea
          class="ant-input ant-input-borderless ant-sender-input"
          placeholder="Loading not change button"
          style="overflow-y: hidden; resize: none;"
        >
          Ask something?
        </textarea>
        <div
          class="ant-sender-actions-list"
        >
          <button
            class="ant-btn ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="arrow-up"
                class="anticon anticon-arrow-up"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/sender/demo/send-style.tsx extend context correctly 2`] = `[]`;

exports[`renders components/sender/demo/speech.tsx extend context correctly 1`] = `
<div
  class="ant-app"
>
  <div
    class="ant-sender"
  >
    <div
      class="ant-sender-content"
    >
      <textarea
        class="ant-input ant-input-borderless ant-sender-input"
        style="overflow-y: hidden; resize: none;"
      />
      <div
        class="ant-sender-actions-list"
      >
        <div
          class="ant-sender-actions-list-presets ant-flex"
        >
          <button
            class="ant-btn ant-btn-text ant-btn-color-primary ant-btn-variant-text ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="audio-muted"
                class="anticon anticon-audio-muted"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="audio-muted"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <defs>
                    <style />
                  </defs>
                  <path
                    d="M682 455V311l-76 76v68c-.1 50.7-42 92.1-94 92a95.8 95.8 0 01-52-15l-54 55c29.1 22.4 65.9 36 106 36 93.8 0 170-75.1 170-168z"
                  />
                  <path
                    d="M833 446h-60c-4.4 0-8 3.6-8 8 0 140.3-113.7 254-254 254-63 0-120.7-23-165-61l-54 54a334.01 334.01 0 00179 81v102H326c-13.9 0-24.9 14.3-25 32v36c.1 4.4 2.9 8 6 8h408c3.2 0 6-3.6 6-8v-36c0-17.7-11-32-25-32H547V782c165.3-17.9 294-157.9 294-328 0-4.4-3.6-8-8-8zm13.1-377.7l-43.5-41.9a8 8 0 00-11.2.1l-129 129C634.3 101.2 577 64 511 64c-93.9 0-170 75.3-170 168v224c0 6.7.4 13.3 1.2 19.8l-68 68A252.33 252.33 0 01258 454c-.2-4.4-3.8-8-8-8h-60c-4.4 0-8 3.6-8 8 0 53 12.5 103 34.6 147.4l-137 137a8.03 8.03 0 000 11.3l42.7 42.7c3.1 3.1 8.2 3.1 11.3 0L846.2 79.8l.1-.1c3.1-3.2 3-8.3-.2-11.4zM417 401V232c0-50.6 41.9-92 94-92 46 0 84.1 32.3 92.3 74.7L417 401z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="arrow-up"
                class="anticon anticon-arrow-up"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/sender/demo/speech.tsx extend context correctly 2`] = `[]`;

exports[`renders components/sender/demo/submitType.tsx extend context correctly 1`] = `
<div
  class="ant-app"
>
  <div
    class="ant-sender"
  >
    <div
      class="ant-sender-content"
    >
      <textarea
        class="ant-input ant-input-borderless ant-sender-input"
        placeholder="Press Shift + Enter to send message"
        style="overflow-y: hidden; resize: none;"
      />
      <div
        class="ant-sender-actions-list"
      >
        <div
          class="ant-sender-actions-list-presets ant-flex"
        >
          <button
            class="ant-btn ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="arrow-up"
                class="anticon anticon-arrow-up"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/sender/demo/submitType.tsx extend context correctly 2`] = `
[
  "Warning: \`NaN\` is an invalid value for the \`%s\` css style property.%s",
]
`;
